# WASM-mini-laska

./: .gitignore  README.md  package.json
code/: CMakeLists.txt  link.c  main.c
code/headers/: board.h  brain.h  control.h  engine.h  game.h  types.h
code/headers/util/: list.h  types.h
code/lib/: board.c  brain.c  control.c  engine.c  game.c
code/lib/util/: list.c  types.h
src/: index.html  index.js  package.json
src/gui/: index.html
src/gui/script/: engine.js  index.mjs  main.js
src/gui/script/binary/: laska.wasm
src/gui/script/util/: engine.mjs  types.js  types.mjs  worker.mjs
src/gui/style/computed/: main.min.css
src/gui/style/less/: main.less
src/script/: engine.js  io.js  link.js  main.js  test.js
src/script/binary/: laska.wasm
src/script/games/: test001.json
src/script/util/: types.js
src/style/: main.css  old.css
src/style/computed/: main.min.css
src/style/less/: main.less
